lab4final/kyverno/disallow-latest.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: enforce
  background: true
  rules:
    - name: disallow-latest-tag
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - lab4
      validate:
        message: "Las imágenes no pueden usar el tag 'latest'."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
