lab4final/kyverno/disallow-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-run-as-non-root
spec:
  validationFailureAction: enforce
  background: true
  rules:
    - name: require-run-as-non-root
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - lab4
      validate:
        message: "Los contenedores deben correr como usuario no-root y no ser privilegiados."
        pattern:
          spec:
            containers:
              - securityContext:
                  runAsNonRoot: true
                  privileged: false
