lab4final/kyverno/require-probes.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-probes
spec:
  validationFailureAction: enforce
  background: true
  rules:
    - name: require-liveness-readiness
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - lab4
      validate:
        message: "Los contenedores deben definir livenessProbe y readinessProbe."
        pattern:
          spec:
            containers:
              - livenessProbe:
                  httpGet:
                    path: "?*"
                    port: "*"
                readinessProbe:
                  httpGet:
                    path: "?*"
                    port: "*"
