lab4final/kyverno/require-resources.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resources
spec:
  validationFailureAction: enforce
  background: true
  rules:
    - name: require-container-resources
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - lab4
      validate:
        message: "Todos los contenedores deben definir requests y limits de CPU y memoria."
        pattern:
          spec:
            containers:
              - resources:
                  requests:
                    cpu: "?*"
                    memory: "?*"
                  limits:
                    cpu: "?*"
                    memory: "?*"
